fix: prevent x overflow, simplify theming

--- a/src/app/tech-list/tech-list.component.theme.scss
+++ b/src/app/tech-list/tech-list.component.theme.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@mixin tech-list-style-light($theme) {
+@mixin tech-list-component-style($theme) {
   $primary:    map-get($theme, primary);
   $accent:     map-get($theme, accent);
   $warn:       map-get($theme, warn);
@@ -7,18 +7,6 @@
   $background: map-get($theme, background);
 
   .tech-container div {
-    background: darken(mat-color($background, background),10%);
-  }
-}
-
-@mixin tech-list-style-dark($theme) {
-  $primary:    map-get($theme, primary);
-  $accent:     map-get($theme, accent);
-  $warn:       map-get($theme, warn);
-  $foreground: map-get($theme, foreground);
-  $background: map-get($theme, background);
-
-  .tech-container div {
-    background: lighten(mat-color($background, background),10%);
+    background: opacify(mix(mat-color($foreground,text), mat-color($background,background), 10%),1);
   }
 }
